# game-of-life

./: README.md  default.nix  gillespies-game-of-life.cabal  gillespies-game-of-life.nix  shell.nix
app/: Main.hs
app/Engine/: Domain.hs  GraphicsPipeline.hs  Init.hs  Monad.hs  Render.hs  Shaders.hs  Utils.hs  Window.hs
app/Engine/Domain/: Frame.hs  Vertex.hs
app/Engine/Monad/: Cmd.hs  Vulkan.hs  VulkanFrame.hs
app/Engine/Shaders/: FragShader.hs  VertexShader.hs
app/Game/: Vertices.hs
