cabal-version:      3.0
name:               gillespies-game-of-life
version:            0.1.0
synopsis:           Submission for GDFG's Monthly Game Jam #8
description:        Submission for GDFG's Monthly Game Jam #8
homepage:           https://github.com/sgillespie/game-of-life

bug-reports:        https://github.com/sgillespie/game-of-life/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net

copyright:          Copyright 2021 Sean D Gillespie
category:           Game

executable gillespies-game-of-life
    main-is:          Main.hs
    build-depends:
      base < 5,
      VulkanMemoryAllocator,
      bytestring,
      linear,
      resourcet,
      sdl2,
      text,
      transformers,
      unliftio-core,
      vector,
      vulkan,
      vulkan-utils
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      DataKinds,
      DerivingStrategies,
      DuplicateRecordFields,
      GeneralizedNewtypeDeriving,
      NumDecimals,
      OverloadedStrings,
      OverloadedLists,
      RecordWildCards
    -- other-extensions:
    other-modules:
      Engine.Domain,
      Engine.Domain.Frame,
      Engine.Domain.Vertex,
      Engine.GraphicsPipeline,
      Engine.Init,
      Engine.Monad,
      Engine.Monad.Cmd,
      Engine.Monad.Vulkan,
      Engine.Monad.VulkanFrame,
      Engine.Render,
      Engine.Shaders,
      Engine.Shaders.FragShader,
      Engine.Shaders.VertexShader,
      Engine.Utils,
      Engine.Window